--- a/app/views/customerquotes/index.html.erb
+++ b/app/views/customerquotes/index.html.erb
@@ -12,25 +12,22 @@
       <th scope="col">Costcenter</th>
       <th scope="col">CPO number</th>
       <th scope="col">Scope</th>
-      <th colspan="3"></th>
+      <!-- <th colspan="3"></th> -->
     </tr>
   </thead>
 
   <tbody>
     <% @customerquotes.each do |customerquote| %>
       <tr>
-        <td><%= customerquote.id %></td>
+        <td><%= link_to customerquote.id, customerquote %></td>
         <td><%= customerquote.name %></td>
         <!-- <td><%#= customerquote.date %></td> -->
         <td><%= customerquote.amount %></td>
         <td><%= customerquote.costcenter.number %></td>
         <% customerquote.customerpos.each do |cpo| %>
           <td><%= link_to cpo.number %></td><%# , customerpo_path(customerpo)%>
-          <td><%= cpo.scope.scope_type %></td>
+          <td><%= link_to cpo.scope.scope_type, scope_path(cpo.scope) %></td>
         <% end %>
-        <td><%= link_to 'Show', customerquote %></td>
-        <td><%= link_to 'Edit', edit_customerquote_path(customerquote) %></td>
-        <td><%= link_to 'Destroy', customerquote, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
