--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -22,28 +22,32 @@
   </div>
 
   <div class="field">
+    <%= form.label :site_id %>
+    <%#= form.text_field :site_id %>
+    <%= form.collection_select :site_id, Site.all, :id, :name %>
+  </div>
+
+  <div class="field">
     <%= form.label :amount %>
     <%= form.number_field :amount %>
   </div>
 
   <div class="field">
+    <%= form.label :customerpo_id %>
+    <%#= form.text_field :customerpo_id %>
+    <%= form.collection_select :customerpo_id, Customerpo.all, :id, :number %>
+  </div>
+
+  <div class="field">
     <%= form.label :status_id %>
-    <%= form.text_field :status_id %>
+    <%#= form.text_field :status_id %>
+    <%= form.collection_select :status_id, Status.all, :id, :state %>
   </div>
 
   <div class="field">
     <%= form.label :scope_id %>
-    <%= form.text_field :scope_id %>
-  </div>
-
-  <div class="field">
-    <%= form.label :customerpo_id %>
-    <%= form.text_field :customerpo_id %>
-  </div>
-
-  <div class="field">
-    <%= form.label :site_id %>
-    <%= form.text_field :site_id %>
+    <%#= form.text_field :scope_id %>
+    <%= form.collection_select :scope_id, Scope.all, :id, :scope_type %>
   </div>
 
   <div class="actions">
