--- a/app/views/shared/_account.html.erb
+++ b/app/views/shared/_account.html.erb
@@ -16,11 +16,10 @@
     <% @accounts.each do |account| %>
       <tr>
         <td scope="row"><%= account.id %></td>
-        <td ><%= account.name %></td>
+        <td ><%= link_to account.name, account %></td>
         <td><%= account.description %></td>
-        <td><%= link_to 'Show', account %></td>
         <td><%= link_to 'Edit', edit_account_path(account) %></td>
-        <td><%= link_to 'Destroy', account, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Delete', account, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
