--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -17,33 +17,35 @@
 
 <p>
   <strong>Status:</strong>
-  <%= @site.status %>
+  <%= link_to @site.status.state, status_url(@site.status) %>
 </p>
 
 <p>
   <strong>Scope:</strong>
-  <%= @site.scope %>
-</p>
-
-<p>
-  <strong>Town:</strong>
-  <%= @site.town %>
-</p>
-
-<p>
-  <strong>Customerpo:</strong>
-  <%= @site.customerpo %>
-</p>
-
-<p>
-  <strong>Customerquote:</strong>
-  <%= @site.customerquote %>
+  <%= link_to @site.scope.scope_type, scope_url(@site.scope) %>
 </p>
 
 <p>
   <strong>Region:</strong>
-  <%= @site.region %>
+  <%= link_to @site.region.name, region_url(@site.region) %>
 </p>
+
+<p>
+  <strong>Town:</strong>
+  <%= link_to @site.town.name, town_url(@site.town) %>
+</p>
+
+<p>
+  <strong>Customerquote:</strong>
+  <%= link_to @site.customerquote.name, customerquote_url(@site.customerquote) %>
+</p>
+
+<p>
+  <strong>Customerpo:</strong>
+  <%= link_to @site.customerpo.number, customerpo_url(@site.customerpo) %>
+</p>
+
+
 
 <%= link_to 'Edit', edit_site_path(@site) %> |
 <%= link_to 'Back', :back %>
