--- a/app/views/towns/show.html.erb
+++ b/app/views/towns/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <strong>Region:</strong>
-  <%= @town.region %>
+  <%= @town.region.name %>
 </p>
 
 <%= link_to 'Edit', edit_town_path(@town) %> |
