--- a/app/views/milestones/_form.html.erb
+++ b/app/views/milestones/_form.html.erb
@@ -16,6 +16,16 @@
     <%= form.text_field :milestone_type %>
   </div>
 
+  <div class="field">
+    <%= form.label :phase %>
+    <%= form.number_field :phase %>
+  </div>
+
+  <div class="field">
+    <%= form.label :percentage %>
+    <%= form.number_field :percentage %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
