realigned the system to flow more dynamically, changed a couple of field names & relationships, inversed some relationships

--- a/app/views/contractorinvoices/_form.html.erb
+++ b/app/views/contractorinvoices/_form.html.erb
@@ -33,8 +33,10 @@
 
   <div class="field">
     <%= form.label :milestone_id %>
-    <%= form.collection_select :milestone_id, Milestone.all, :id, :milestone_type %>
+    <%= form.collection_select :milestone_id, Milestone.all, :id, :phase %>
   </div> 
+
+  <!-- Dynamic select the percentage of pay here -->
 
   <div class="actions">
     <%= form.submit %>
