--- a/app/views/contractorinvoices/show.html.erb
+++ b/app/views/contractorinvoices/show.html.erb
@@ -17,7 +17,7 @@
 
 <p>
   <strong>Milestone:</strong>
-  <%= @contractorinvoice.milestone.milestone_type %>
+  <%= @contractorinvoice.milestone.phase %>
 </p>
 
 <%= link_to 'Edit', edit_contractorinvoice_path(@contractorinvoice) %> |
