--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -35,15 +35,15 @@
   <%= link_to @site.town.name, town_url(@site.town) %>
 </p>
 
-<p>
+<!-- <p>
   <strong>Customerquote:</strong>
-  <%= link_to @site.customerquote.name, customerquote_url(@site.customerquote) %>
+  <%#= link_to @site.customerquote.name, customerquote_url(@site.customerquote) %>
 </p>
 
 <p>
   <strong>Customerpo:</strong>
-  <%= link_to @site.customerpo.number, customerpo_url(@site.customerpo) %>
-</p>
+  <%#= link_to @site.customerpo.number, customerpo_url(@site.customerpo) %>
+</p> -->
 
 
 
