--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -12,8 +12,8 @@
       <th scope="col">Status</th>
       <th scope="col">Scope</th>
       <th scope="col">Town</th>
-      <th scope="col">Customerquote</th>
-      <th scope="col">Customerpo</th>
+      <!-- <th scope="col">Customerquote</th>
+      <th scope="col">Customerpo</th> -->
       <th scope="col">Region</th>
       <th colspan="3"></th>
     </tr>
@@ -29,8 +29,8 @@
         <td><%= site.status.state %></td>
         <td><%= site.scope.scope_type %></td>
         <td><%= site.town.name %></td>
-        <td><%= site.customerquote.name %></td>
-        <td><%= site.customerpo.number %></td>
+        <!-- <td><%#= site.customerquote.name %></td>
+        <td><%#= site.customerpo.number %></td> -->
         <td><%= site.region.name %></td>
         <td><%= link_to 'Show', site %></td>
         <td><%= link_to 'Edit', edit_site_path(site) %></td>
