--- a/app/views/customerquotes/index.html.erb
+++ b/app/views/customerquotes/index.html.erb
@@ -23,12 +23,14 @@
         <td><%= link_to customerquote.name, customerquote %></td>
         <td><%= customerquote.date %></td>
         <td><%= customerquote.amount %></td>
-        <td><%= customerquote.costcenter.number %></td>
+        <td><%= customerquote.costcenter.number %></td>check if child element exists if not display text rails
         <!-- <td><%#= customerquote.customerpo.number unless customerquote.customerpo.blank? %></td> -->
         <%#= @foo.text unless @foo.blank? %>
         <td>
           <% customerquote.customerpos.each do |customerpo| %>
-            <%= link_to customerpo.number, customerpo %><%# %>
+            <%= link_to customerpo.number, customerpo unless customerpo.blank? %>
+              <!-- No Order -->
+            <%# end %><%# %>
           <% end %>
         </td>
         <td><%= customerquote.scope.scope_type %></td>
