added milestone an stage to both invoices

--- a/app/views/contractorinvoices/_form.html.erb
+++ b/app/views/contractorinvoices/_form.html.erb
@@ -26,15 +26,20 @@
     <%= form.number_field :amount %>
   </div>
 
- <!--  <div class="field">
-    <%#= form.label :milestone_id %>
-    <%#= form.text_field :milestone_id %>
-  </div> -->
+  <div class="field">
+    <%= form.label :site_id %>
+    <%= form.collection_select :site_id, Site.all, :id, :name %>
+  </div>
 
   <div class="field">
     <%= form.label :milestone_id %>
     <%= form.collection_select :milestone_id, Milestone.all, :id, :phase %>
   </div> 
+
+  <div class="field">
+    <%= form.label :stage_id %>
+    <%= form.grouped_collection_select :stage_id, Milestone.all, :stages, :phase, :id, :percentage %>
+  </div>
 
   <!-- Dynamic select the percentage of pay here -->
 
