--- a/app/views/contractorinvoices/_form.html.erb
+++ b/app/views/contractorinvoices/_form.html.erb
@@ -32,6 +32,11 @@
   </div>
 
   <div class="field">
+    <%= form.label :contractorpo_id %>
+    <%= form.collection_select :contractorpo_id, Contractorpo.all, :id, :number %>
+  </div>
+
+  <div class="field">
     <%= form.label :milestone_id %>
     <%= form.collection_select :milestone_id, Milestone.all, :id, :phase %>
   </div> 
