--- a/app/views/contractorquotes/_form.html.erb
+++ b/app/views/contractorquotes/_form.html.erb
@@ -31,6 +31,10 @@
     <%= form.text_area :description %>
   </div>
 
+  <div class="field">
+    <%= form.label :contractor_id %>
+    <%= form.collection_select :contractor_id, Contractor.all, :id, :name %>
+  </div> 
   <!-- <div class="field">
     <%#= form.label :site_id %>
     <%#= form.text_field :site_id %>
