--- a/app/views/milestones/show.html.erb
+++ b/app/views/milestones/show.html.erb
@@ -25,6 +25,6 @@
 </table>
 
 
-
 <%= link_to 'Edit', edit_milestone_path(@milestone) %> |
 <%= link_to 'Back', :back %>
+<%#= "#{@milestone.impressionist_count}" %>
