--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -13,7 +13,8 @@
   <%= link_to 'Contractors', contractors_path %> |
   <%= link_to 'Contractor Quotes', contractorquotes_path %> |
   <%= link_to 'Contractor POs', contractorpos_path %> |
-  <%= link_to 'Contractor Invoices', contractorinvoices_path %>
+  <%= link_to 'Contractor Invoices', contractorinvoices_path %> |
+  <%= link_to 'Pay Vouchers', paymentvouchers_path %> 
 </nav>
 
 
