--- a/app/views/contractors/_form.html.erb
+++ b/app/views/contractors/_form.html.erb
@@ -30,6 +30,14 @@
     <%= form.collection_select :status_id, Status.all, :id, :state %>
   </div> 
 
+  <div class="field">
+    <%= form.label :site_id %>
+    <%#= form.collection_select :site_id, Site.all, :id, :name %>
+    <%#= form.collection_select(:site_id, Site.all, :id, :name_with_initial, prompt: true) %>
+    <%#= form.collection_select(:site_ids, Site.all, :id, :name,{}, {:multiple => true}) %>
+    <%= form.collection_select(:site_id, Site.all, :id, :name, {:prompt => "Please Select a site"}, {:multiple => true}) %>
+  </div> 
+
   <div class="actions">
     <%= form.submit %>
   </div>
