--- a/app/views/paymentvouchers/_form.html.erb
+++ b/app/views/paymentvouchers/_form.html.erb
@@ -18,13 +18,14 @@
 
   <div class="field">
     <%= form.label :site_id %>
-    <%= form.text_field :site_id %>
+    <%= form.collection_select :site_id, Site.all, :id, :name %>
   </div>
 
   <div class="field">
     <%= form.label :contractorinvoice_id %>
-    <%= form.text_field :contractorinvoice_id %>
+    <%= form.collection_select :contractorinvoice_id, Contractorinvoice.all, :id, :number %>
   </div>
+
 
   <div class="actions">
     <%= form.submit %>
