--- a/app/views/contractorinvoices/show.html.erb
+++ b/app/views/contractorinvoices/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Date:</strong>
-  <%= @contractorinvoice.date %>
+  <%= @contractorinvoice.date.strftime("%d %b, %Y") %>
 </p>
 
 <p>
