--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Date:</strong>
-  <%= @invoice.date %>
+  <%= @invoice.date.strftime("%d %b, %Y") %>
 </p>
 <p>
   <strong>Site:</strong>
