--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -14,6 +14,7 @@
   <%= link_to 'Contractor Quotes', contractorquotes_path %> |
   <%= link_to 'Contractor POs', contractorpos_path %> |
   <%= link_to 'Contractor Invoices', contractorinvoices_path %> |
+  <%= link_to 'Contracts', contracts_path %> |
   <%= link_to 'Pay Vouchers', paymentvouchers_path %> 
 </nav>
 
