--- a/app/views/contractors/show.html.erb
+++ b/app/views/contractors/show.html.erb
@@ -37,5 +37,33 @@
 	</tbody>
 </table> -->
 
+<h1>Contracts</h1>
+
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Amount</th>
+      <th scope="col">Date</th>
+      <th scope="col">Contractor</th>
+      <th scope="col">Contractorpos</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @contractor.contracts.each do |contract| %>
+      <tr>
+        <td scope="row"><%= contract.id %></td>
+        <td><%= contract.amount %></td>
+        <td><%= contract.date %></td>
+        <td><%= link_to contract.site.name, site_url(contract.site) %></td>
+        <td><%= link_to contract.contractorpo.number, contractorpo_url(contract.contractorpo) %></td>
+        <td><%= link_to 'Show', contract %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
 <%= link_to 'Edit', edit_contractor_path(@contractor) %> |
 <%= link_to 'Back', :back %>
