--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -45,6 +45,33 @@
   <%#= link_to @site.customerpo.number, customerpo_url(@site.customerpo) %>
 </p> -->
 
+<h1>Contracts</h1>
+
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Amount</th>
+      <th scope="col">Date</th>
+      <th scope="col">Contractor</th>
+      <th scope="col">Contractorpos</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @site.contracts.each do |contract| %>
+      <tr>
+        <td scope="row"><%= contract.id %></td>
+        <td><%= contract.amount %></td>
+        <td><%= contract.date %></td>
+        <td><%= link_to contract.contractor.name, contractor_url(contract.contractor) %></td>
+        <td><%= link_to contract.contractorpo.number, contractorpo_url(contract.contractorpo) %></td>
+        <td><%= link_to 'Show', contract %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
 
 
 <%= link_to 'Edit', edit_site_path(@site) %> |
