--- a/app/views/contractors/_form.html.erb
+++ b/app/views/contractors/_form.html.erb
@@ -17,14 +17,20 @@
   </div>
 
   <div class="field">
+    <%= form.label :name %>
+    <%= form.email_field :email %>
+  </div>
+
+  <div class="field">
+    <%= form.label :name %>
+    <%= form.number_field :telephone %>
+  </div>
+
+  <div class="field">
     <%= form.label :description %>
     <%= form.text_area :description %>
   </div>
 
-  <!-- <div class="field">
-    <%#= form.label :status_id %>
-    <%#= form.text_field :status_id %>
-  </div> -->
   <div class="field">
     <%= form.label :status_id %>
     <%= form.collection_select :status_id, Status.all, :id, :state %>
