--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -12,6 +12,21 @@
   <% end %>
 
   <div class="field">
+    <%= form.label :pin %>
+    <%= form.text_field :pin %>
+  </div>
+
+  <div class="field">
+    <%= form.label :invoice_to %>
+    <%= form.text_area :invoice_to %>
+  </div>
+
+  <div class="field">
+    <%= form.label :unit %>
+    <%= form.text_field :unit %>
+  </div>
+
+  <div class="field">
     <%= form.label :number %>
     <%= form.text_field :number %>
   </div>
@@ -23,7 +38,6 @@
 
   <div class="field">
     <%= form.label :site_id %>
-    <%#= form.text_field :site_id %>
     <%= form.collection_select :site_id, Site.all, :id, :name %>
   </div>
 
@@ -33,20 +47,22 @@
   </div>
 
   <div class="field">
+    <%= form.label :customerquote_id %>
+    <%= form.collection_select :customerquote_id, Customerquote.all, :id, :name %>
+  </div>
+
+  <div class="field">
     <%= form.label :customerpo_id %>
-    <%#= form.text_field :customerpo_id %>
     <%= form.collection_select :customerpo_id, Customerpo.all, :id, :number %>
   </div>
 
   <div class="field">
     <%= form.label :status_id %>
-    <%#= form.text_field :status_id %>
     <%= form.collection_select :status_id, Status.all, :id, :state %>
   </div>
 
   <div class="field">
     <%= form.label :scope_id %>
-    <%#= form.text_field :scope_id %>
     <%= form.collection_select :scope_id, Scope.all, :id, :scope_type %>
   </div>
 
@@ -58,6 +74,11 @@
   <div class="field">
     <%= form.label :stage_id %>
     <%= form.grouped_collection_select :stage_id, Milestone.all, :stages, :phase, :id, :percentage %>
+  </div>
+
+  <div class="field">
+    <%= form.label :description %>
+    <%= form.text_area :description %>
   </div>
 
   <div class="actions">
