--- a/app/views/contractorinvoices/index.html.erb
+++ b/app/views/contractorinvoices/index.html.erb
@@ -20,7 +20,7 @@
         <td scope="row"><%= contractorinvoice.id %></td>
         <td><%= link_to contractorinvoice.number, contractorinvoice %></td>
         <td><%= contractorinvoice.date.strftime("%d %b, %Y") %></td>
-        <td><%= contractorinvoice.amount %></td>
+        <td><%#= contractorinvoice.amount %></td>
         <td><%= contractorinvoice.milestone.phase %></td>
         <td><%= link_to 'Edit', edit_contractorinvoice_path(contractorinvoice) %></td>
         <td><%= link_to 'Destroy', contractorinvoice, method: :delete, data: { confirm: 'Are you sure?' } %></td>
