--- a/app/views/contractorinvoices/_form.html.erb
+++ b/app/views/contractorinvoices/_form.html.erb
@@ -12,6 +12,12 @@
   <% end %>
 
   <div class="field">
+    <%= form.label :contractor_id %>
+    <%= form.collection_select :contractor_id, Contractor.all, :id, :name %>
+  </div>
+
+
+  <div class="field">
     <%= form.label :invoice_to %>
     <%= form.text_area :invoice_to %>
   </div>
