--- a/app/views/customerpos/_form.html.erb
+++ b/app/views/customerpos/_form.html.erb
@@ -23,7 +23,7 @@
 
   <div class="field">
     <%= form.label :amount %>
-    <%= form.number_field :amount %>
+    <%= form.number_field :amount, class: :text_field, step: :any %>
   </div>
 
   <div class="field">
